--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "dependencies": {
+    "lodash": "^4.6.1",
     "node-uuid": "^1.4.7",
     "pouchdb": "^5.2.1",
     "pouchdb-find": "^0.9.0",
