--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubpress-plugin-pouchdb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "PouchDB for HubPress",
   "main": "lib/pouchDbPlugin.js",
   "scripts": {
@@ -21,6 +21,8 @@
     "q": "^1.4.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
     "uglify-js": "^2.6.2"
   }
 }
